# MEDUSA

./: .gitignore  Cargo.toml  Dockerfile.aoa  Makefile  README.md  agent_runtime_contracts.md.resolved  architecture_design.md.resolved  buf.gen.yaml  confidence_scoring_architecture.md.resolved  docker-compose.yaml  emergency_resource_model.md.resolved  event_driven_architecture_spec.md.resolved  go.mod  human_in_the_loop_governance.md.resolved  implementation_plan.md.resolved  k8s-aoa-deployment.yaml  operational_crisis_definitions.md.resolved  resource_allocation_model.md.resolved  shared_state_graph_architecture.md.resolved  signal_ingestion_layer.md.resolved  stakeholder_communication_orchestration.md.resolved
.github/workflows/: ci.yml
api/proto/: buf.yaml
frontend/: .gcloudignore  Dockerfile  capacitor.config.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/android/app/: build.gradle
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: theme-provider.tsx
frontend/src/hooks/: useAlerts.ts  useAmbulances.ts  useHospitals.ts  useIncidents.ts  useIntelligenceStore.ts  useNetworkStore.ts  useRealtimeDispatch.ts
frontend/src/lib/: mock-data.ts  osrm.ts  supabase.ts
frontend/src/services/: contradiction-engine.ts  dispatch-engine.ts  escalation-engine.ts  intelligence-engine.ts  routing-engine.ts  scenario-engine.ts
frontend/src/types/: database.types.ts  intelligence.types.ts
infra/otel/: otel-collector.yaml
internal/kafka/: producer.go
scripts/: build-go.ps1  proto-gen.sh  validate.sh
services/allocation-agent/: Cargo.toml  Dockerfile  Makefile  build.rs  config.toml  config.yaml
services/allocation-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
services/allocation-agent/proto/: allocation.proto
services/allocation-agent/src/: config.rs  main.rs
services/allocation-agent/src/allocation/: constraints.rs  engine.rs  mod.rs  opportunity_cost.rs  optimizer.rs
services/allocation-agent/src/grpc/: approval_client.rs  mod.rs  server.rs
services/allocation-agent/src/health/: mod.rs
services/allocation-agent/src/kafka/: consumer.rs  producer.rs
services/allocation-agent/src/locking/: mod.rs  redlock.rs
services/allocation-agent/src/middleware/: circuit_breaker.rs  retry.rs
services/allocation-agent/src/models/: allocation_blueprint.rs  confidence_result.rs  mod.rs  resource_state.rs  rollback_manifest.rs
services/allocation-agent/src/otel/: tracing.rs
services/allocation-agent/src/redis/: client.rs
services/allocation-agent/src/state/: cache.rs  mod.rs  resource_graph.rs
services/audit-agent/: Dockerfile  Makefile  config.yaml  go.mod  go.sum
services/audit-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  service.yaml
services/confidence-agent/: Cargo.toml  Dockerfile  Makefile  config.yaml
services/confidence-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
services/confidence-agent/src/: config.rs  main.rs
services/confidence-agent/src/classification/: bayesian.rs  mod.rs  scoring.rs  weights.rs
services/confidence-agent/src/health/: mod.rs  server.rs
services/confidence-agent/src/kafka/: consumer.rs  producer.rs
services/confidence-agent/src/logger/: mod.rs
services/confidence-agent/src/middleware/: circuit_breaker.rs
services/confidence-agent/src/models/: confidence_result.rs  crisis_event.rs  mod.rs
services/confidence-agent/src/otel/: tracing.rs
services/confidence-agent/src/redis/: client.rs
services/correlation-agent/: Cargo.toml  Dockerfile  Makefile  config.yaml
services/correlation-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
services/correlation-agent/src/: config.rs  main.rs
services/correlation-agent/src/correlation/: engine.rs  mod.rs  sliding_window.rs
services/correlation-agent/src/health/: mod.rs  server.rs
services/correlation-agent/src/kafka/: consumer.rs  producer.rs
services/correlation-agent/src/logger/: mod.rs
services/correlation-agent/src/middleware/: circuit_breaker.rs  retry.rs
services/correlation-agent/src/models/: crisis_event.rs  mod.rs  unified_event.rs
services/correlation-agent/src/otel/: mod.rs  tracing.rs
services/correlation-agent/src/redis/: client.rs
services/correlation-agent/src/state/: cache.rs
services/ingestion-agent/: Dockerfile  Makefile  config.yaml  go.mod  go.sum
services/ingestion-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
services/messaging-agent/: Dockerfile  Makefile  config.yaml  go.mod  go.sum
services/messaging-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  (+2 more)
services/mobile-interaction/: Dockerfile  Makefile  config.yaml  go.mod  go.sum
services/orchestrator-agent/: Dockerfile  Makefile  config.yaml  go.mod  go.sum
services/oversight-agent/: Dockerfile  Makefile  config.yaml  go.mod
services/recovery-agent/: Dockerfile  Makefile  config.yaml  go.mod
services/simulation-agent/: Cargo.toml  Dockerfile  Makefile  config.yaml
services/simulation-agent/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  service.yaml
services/simulation-agent/src/: config.rs  main.rs
services/simulation-agent/src/graph/: mod.rs
services/simulation-agent/src/health/: mod.rs
services/simulation-agent/src/kafka/: mod.rs
services/simulation-agent/src/middleware/: mod.rs
services/simulation-agent/src/models/: mod.rs
services/simulation-agent/src/montecarlo/: mod.rs  tests.rs
services/simulation-agent/src/otel/: mod.rs
services/simulation-agent/src/replay/: mod.rs
services/simulation-agent/src/simulation/: mod.rs
services/simulation-agent/src/state/: mod.rs
(+149 files in other folders)
