[workspace]
members = [
    "services/correlation-agent",
    "services/confidence-agent",
    "services/allocation-agent",
    "services/simulation-agent",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Antigravity Engineering <eng@antigravity.dev>"]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "script"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
async-channel = "2.2"
axum = "0.7"
tokio-util = "0.7"
sha2 = "0.10"
hex = "0.4"
governor = "0.6"
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
rand = "0.8"
rand_distr = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde_yaml = "0.9"
async-trait = "0.1"
bytes = "1.0"
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
