[package]
name = "correlation-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "correlation-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }
async-channel = { workspace = true }
governor = { workspace = true }
axum = { workspace = true }

